# Triangle-Mesh-Rasterization-Projection

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
doc/: BBF.md  setup.md
src/: image_format_png.hpp  main.cpp  ply.hpp  text.hpp
